gcc/testsuite/rust/rustc/ui/parser/bound-single-question-mark.rs
fn f<T: ?>() {} // { dg-error "" "" { target *-*-* } }

